--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start":       "budo src/main.js:bundle.js --live",
     "prebuild":    "mkdir -p build",
-    "build":       "npm run build:js && npm run build:css && npm run build:html && npm run copy:all",
+    "build":       "npm run build:js && npm run build:css && npm run build:html && npm run copy:all && npm run copy:cordova",
     "build:js":    "browserify src/main.js | uglifyjs -cm > build/bundle.min.js",
     "build:css":   "cleancss css/main.css -o build/main.min.css",
     "build:html":  "htmlprocessor index.html -o build/index.html",
     "copy:all":    "npm run copy:assets && npm run copy:phaser",
     "copy:assets": "cp -rf assets build/",
-    "copy:phaser": "cp -rf node_modules/phaser/build/phaser.min.js build/phaser.min.js"
+    "copy:phaser": "cp -rf node_modules/phaser/build/phaser.min.js build/phaser.min.js",
+    "copy:cordova": "cp -rf build/* publish/SpaceInvasion/www/"
   },
   "keywords": [],
   "author": "",
