Preparación del build (de node). Ya hace el build correctamente.

--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start":       "budo src/main.js:bundle.js --live",
-    "prebuild":    "mkdir -p build",
-    "build":       "npm run build:js && npm run build:css && npm run build:html && npm run copy:all && npm run copy:cordova",
-    "build:js":    "browserify src/main.js | uglifyjs -cm > build/bundle.min.js",
-    "build:css":   "cleancss css/main.css -o build/main.min.css",
-    "build:html":  "htmlprocessor index.html -o build/index.html",
-    "copy:all":    "npm run copy:assets && npm run copy:phaser",
-    "copy:assets": "cp -rf assets build/",
-    "copy:phaser": "cp -rf node_modules/phaser/build/phaser.min.js build/phaser.min.js",
-    "copy:cordova": "cp -rf build/* publish/SpaceInvasion/www/"
+    "start":            "budo src/main.js:bundle.js --live",
+    "prebuild":         "mkdir -p build/src && mkdir -p build/css",
+    "build":            "npm run build:js && npm run build:css && npm run build:html && npm run copy:all",
+    "build:js":         "browserify src/main.js | uglifyjs -cm > build/src/bundle.min.js",
+    "build:css":        "cleancss css/main.css -o build/css/main.min.css && cleancss css/bootstrap.css -o build/css/bootstrap.min.css ",
+    "build:html":       "htmlprocessor index.html -o build/index.html",
+    "copy:all":         "npm run copy:assets && npm run copy:filters && npm run copy:components && npm run copy:plugins && npm run copy:phaser",
+    "copy:assets":      "cp -rf assets build/",
+    "copy:components":  "cp -rf src/components build/src/",
+    "copy:filters":     "cp -rf src/filters build/src/",
+    "copy:plugins":     "cp -rf src/plugins build/src/",
+    "copy:phaser":      "cp -rf node_modules/phaser/build/phaser.min.js build/src/phaser.min.js"
   },
   "keywords": [],
   "author": "",
